# Am1r1cA-back-end

./: .env.example  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/db/: __init__.py  base.py  session.py
